--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,14 +7,55 @@
     <x>0</x>
     <y>0</y>
     <width>792</width>
-    <height>491</height>
+    <height>609</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="curRepoLabel">
+        <property name="text">
+         <string>Current repo:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="curRepoCombo">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="curRepoButton">
+        <property name="text">
+         <string>Browse...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_9">
       <item>
@@ -276,26 +317,12 @@
      </widget>
     </item>
    </layout>
-   <zorder>gridLayoutWidget_2</zorder>
-   <zorder>label_2</zorder>
-   <zorder>currentIndex</zorder>
-   <zorder>save</zorder>
-   <zorder>label</zorder>
-   <zorder>indexSize</zorder>
-   <zorder>label_4</zorder>
-   <zorder>rev</zorder>
-   <zorder>label_5</zorder>
-   <zorder>file</zorder>
-   <zorder>label_7</zorder>
-   <zorder>site</zorder>
-   <zorder>userRepo</zorder>
-   <zorder>label_6</zorder>
-   <zorder>label_3</zorder>
-   <zorder>zcode</zorder>
-   <zorder>userRepo</zorder>
    <zorder></zorder>
-   <zorder>horizontalSpacer_2</zorder>
    <zorder>tabWidget</zorder>
+   <zorder>curRepoLabel</zorder>
+   <zorder>lineEdit</zorder>
+   <zorder>curRepoButton</zorder>
+   <zorder>horizontalSpacer_3</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
