--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -265,11 +265,12 @@
            </sizepolicy>
           </property>
           <property name="columnCount">
-           <number>4</number>
+           <number>5</number>
           </property>
           <attribute name="verticalHeaderVisible">
            <bool>false</bool>
           </attribute>
+          <column/>
           <column/>
           <column/>
           <column/>
@@ -286,8 +287,9 @@
         <item>
          <widget class="QTableWidget" name="tableWidget_2">
           <property name="columnCount">
-           <number>4</number>
+           <number>5</number>
           </property>
+          <column/>
           <column/>
           <column/>
           <column/>
@@ -304,8 +306,9 @@
         <item>
          <widget class="QTableWidget" name="tableWidget_3">
           <property name="columnCount">
-           <number>4</number>
+           <number>5</number>
           </property>
+          <column/>
           <column/>
           <column/>
           <column/>
