--- a/manager/editor.ui
+++ b/manager/editor.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Editor</class>
- <widget class="QDialog" name="Editor">
+ <class>ZMEditor</class>
+ <widget class="QDialog" name="ZMEditor">
   <property name="geometry">
    <rect>
     <x>0</x>
