"Default repo" button

--- a/manager/mainwindow.ui
+++ b/manager/mainwindow.ui
@@ -42,6 +42,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="defaultRepoButton">
+        <property name="text">
+         <string>Default repo</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
