--- a/manager/zmeditor.ui
+++ b/manager/zmeditor.ui
@@ -27,6 +27,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="highlight">
+       <property name="text">
+        <string>Highlight: 1</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
