Simple menu (e.g. Preferences). Auto-connection of actionQuit (e.g. %Q)

--- a/manager/mainwindow.ui
+++ b/manager/mainwindow.ui
@@ -462,6 +462,15 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuZekyll_Manager">
+    <property name="title">
+     <string>Zekyll Manager</string>
+    </property>
+    <addaction name="actionAbout"/>
+    <addaction name="actionPreferences"/>
+    <addaction name="actionQuit"/>
+   </widget>
+   <addaction name="menuZekyll_Manager"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -472,6 +481,21 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionPreferences">
+   <property name="text">
+    <string>Preferences</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
