--- a/manager/mainwindow.ui
+++ b/manager/mainwindow.ui
@@ -67,31 +67,83 @@
      <layout class="QHBoxLayout" name="horizontalLayout_9">
       <item>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <widget class="QPushButton" name="gitCommit">
-          <property name="text">
-           <string>Git Commit</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="1">
          <widget class="QPushButton" name="gitReset">
           <property name="text">
-           <string>Git Reset</string>
+           <string>Reset</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QPushButton" name="gitCheckout">
+          <property name="text">
+           <string>Checkout</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="7">
+         <widget class="QPushButton" name="gitPull">
+          <property name="text">
+           <string>Pull</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_8">
+          <property name="text">
+           <string>Git:</string>
+          </property>
+          <property name="indent">
+           <number>10</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="5">
+         <widget class="QPushButton" name="gitStatus">
+          <property name="text">
+           <string>Status</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="6">
+         <widget class="QPushButton" name="gitPush">
+          <property name="text">
+           <string>Push</string>
           </property>
          </widget>
         </item>
         <item row="0" column="2">
-         <widget class="QPushButton" name="gitCheckout">
+         <widget class="QPushButton" name="gitCommit">
           <property name="text">
-           <string>Git Checkout</string>
+           <string>Commit</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QPushButton" name="gitStatus">
+        <item row="1" column="1">
+         <widget class="QPushButton" name="git2NewBranch">
           <property name="text">
-           <string>Git Status</string>
+           <string>New Branch</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QPushButton" name="git2AddTag">
+          <property name="text">
+           <string>Add Tag</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="4">
+         <widget class="QPushButton" name="git2DeleteBranch">
+          <property name="text">
+           <string>Delete Branch</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="5">
+         <widget class="QPushButton" name="git2DeleteTag">
+          <property name="text">
+           <string>Delete tag</string>
           </property>
          </widget>
         </item>
