--- a/manager/pulldialog.ui
+++ b/manager/pulldialog.ui
@@ -138,7 +138,23 @@
     </layout>
    </item>
    <item>
-    <widget class="QListWidget" name="listWidget"/>
+    <widget class="QTableWidget" name="tableWidget">
+     <property name="columnCount">
+      <number>3</number>
+     </property>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>100</number>
+     </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderDefaultSectionSize">
+      <number>50</number>
+     </attribute>
+     <column/>
+     <column/>
+     <column/>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -179,22 +195,6 @@
     </layout>
    </item>
   </layout>
-  <zorder>listWidget</zorder>
-  <zorder>url</zorder>
-  <zorder>fetchBranch</zorder>
-  <zorder>fetchURL</zorder>
-  <zorder>branchCombo</zorder>
-  <zorder>label</zorder>
-  <zorder>fetchHeadCombo</zorder>
-  <zorder>horizontalSpacer</zorder>
-  <zorder>merge</zorder>
-  <zorder>exit</zorder>
-  <zorder>mergeTypeLabel</zorder>
-  <zorder>horizontalSpacer_2</zorder>
-  <zorder>fetchBranch</zorder>
-  <zorder>fetchAll</zorder>
-  <zorder>horizontalSpacer_3</zorder>
-  <zorder>checkoutLabel</zorder>
  </widget>
  <resources/>
  <connections/>
