--- a/manager/pulldialog.ui
+++ b/manager/pulldialog.ui
@@ -23,6 +23,16 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="5">
+      <widget class="QPushButton" name="fetchAll">
+       <property name="text">
+        <string>Fetch all (follow config)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QComboBox" name="remotesCombo"/>
+     </item>
      <item row="1" column="5">
       <widget class="QPushButton" name="fetchURL">
        <property name="text">
@@ -35,26 +45,6 @@
      </item>
      <item row="0" column="6">
       <spacer name="horizontalSpacer_5">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="0" column="4">
-      <widget class="QPushButton" name="fetchAll">
-       <property name="text">
-        <string>Fetch all (follow config)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="5">
-      <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -84,7 +74,7 @@
      <item row="0" column="1" colspan="2">
       <widget class="QPushButton" name="fetchBranch">
        <property name="text">
-        <string>Fetch branch</string>
+        <string>Fetch branch &lt;- from -&gt;</string>
        </property>
       </widget>
      </item>
@@ -101,7 +91,7 @@
        </property>
       </spacer>
      </item>
-     <item row="0" column="3">
+     <item row="0" column="4">
       <widget class="Line" name="line">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
