--- a/manager/pulldialog.ui
+++ b/manager/pulldialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>668</width>
+    <width>720</width>
     <height>490</height>
    </rect>
   </property>
@@ -30,34 +30,24 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
-      <widget class="QComboBox" name="remotesCombo"/>
-     </item>
-     <item row="1" column="5">
-      <widget class="QPushButton" name="fetchURL">
-       <property name="text">
-        <string>Fetch URL</string>
+     <item row="0" column="4">
+      <widget class="QComboBox" name="remotesCombo">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="5">
-      <widget class="QLineEdit" name="url"/>
-     </item>
-     <item row="0" column="6">
-      <spacer name="horizontalSpacer_5">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="0" column="0">
+     <item row="0" column="0" colspan="2">
       <widget class="QComboBox" name="branchCombo">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>2</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>140</width>
@@ -71,25 +61,57 @@
        </item>
       </widget>
      </item>
-     <item row="0" column="1" colspan="2">
+     <item row="0" column="2" colspan="2">
       <widget class="QPushButton" name="fetchBranch">
        <property name="text">
         <string>⬅ fetch branch from ➡</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="6">
-      <spacer name="horizontalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+    </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>URL:</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="url">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>4</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
-      </spacer>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Branch:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLineEdit" name="branch">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QPushButton" name="fetchURL">
+       <property name="text">
+        <string>Fetch URL</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -122,6 +144,12 @@
    </item>
    <item>
     <widget class="QTableWidget" name="tableWidget">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>3</verstretch>
+      </sizepolicy>
+     </property>
      <property name="columnCount">
       <number>3</number>
      </property>
@@ -178,6 +206,14 @@
     </layout>
    </item>
   </layout>
+  <zorder>checkoutLabel</zorder>
+  <zorder>tableWidget</zorder>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>url</zorder>
+  <zorder>label_3</zorder>
+  <zorder>branch</zorder>
+  <zorder>fetchURL</zorder>
  </widget>
  <resources/>
  <connections/>
