Make PullDialog's checkout message selectable (to allow copying of oid)

--- a/manager/pulldialog.ui
+++ b/manager/pulldialog.ui
@@ -19,6 +19,9 @@
      <property name="text">
       <string>Currently checked out: </string>
      </property>
+     <property name="textInteractionFlags">
+      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+     </property>
     </widget>
    </item>
    <item>
