Manual edit of entry's zekyll (although it's immediately for rewrite)

--- a/manager/mainwindow.ui
+++ b/manager/mainwindow.ui
@@ -358,6 +358,13 @@
        </spacer>
       </item>
       <item>
+       <widget class="QToolButton" name="e">
+        <property name="text">
+         <string>E</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QToolButton" name="minus">
         <property name="text">
          <string>–</string>
