MainWindow: QPlainTextEdit (the messages) is set to read only

--- a/manager/mainwindow.ui
+++ b/manager/mainwindow.ui
@@ -498,6 +498,9 @@
         <height>90</height>
        </size>
       </property>
+      <property name="textInteractionFlags">
+       <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+      </property>
      </widget>
     </item>
    </layout>
