--- a/manager/pulldialog.ui
+++ b/manager/pulldialog.ui
@@ -153,6 +153,12 @@
        <verstretch>3</verstretch>
       </sizepolicy>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
      <property name="columnCount">
       <number>3</number>
      </property>
@@ -209,14 +215,6 @@
     </layout>
    </item>
   </layout>
-  <zorder>checkoutLabel</zorder>
-  <zorder>tableWidget</zorder>
-  <zorder>label</zorder>
-  <zorder>label_2</zorder>
-  <zorder>url</zorder>
-  <zorder>label_3</zorder>
-  <zorder>branch</zorder>
-  <zorder>fetchURL</zorder>
  </widget>
  <resources/>
  <connections/>
